# CBNN-Playground

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  initial.puml  new.puml
lib/: CMakeLists.txt
lib/libmath/: CMakeLists.txt
lib/libmath/include/libmath/: math.h
lib/libmath/src/: math.cpp
lib/libml/: CMakeLists.txt
lib/libml/doc/: compute_module.puml  neural_module.puml  stack.puml  todo.md
lib/libml/include/libml/: dataset.h  losses.h  mlp.h
lib/libml/include/libml/compute/: graph.h  nodes.h  utils.h  visitors.h
lib/libml/include/libml/neural/: activations.h  aggregations.h  dataset.h  layers.h  losses.h  mlp.h  neuron.h  optimizers.h
lib/libml/src/: dataset.cpp  losses.cpp  mlp.cpp
lib/libml/src/compute/: graph.cpp  nodes.cpp  utils.cpp  visitors.cpp
lib/libml/src/neural/: activations.cpp  aggregations.cpp  dataset.cpp  layers.cpp  losses.cpp  mlp.cpp  neuron.cpp  optimizers.cpp
lib/libverlet/: CMakeLists.txt
lib/libverlet/include/libverlet/: Verlet.h
lib/libverlet/src/: Verlet.cpp
src/: main.cpp  main.cpp.old  main.old.cpp
src/ML/: Layer.cpp  Layer.h  MLP.cpp  MLP.h  Neuron.cpp  Neuron.h
src/Utils/: ColorsUtils.cpp  ColorsUtils.h  GuiUtils.cpp  GuiUtils.h  ImGuiUtils.cpp  ImGuiUtils.h  MathUtils.cpp  MathUtils.h
src/libcompute/: CMakeLists.txt
src/libgraph/: CMakeLists.txt
src/libgraph/include/: graph.h
src/libgraph/src/: graph.cpp
src/libml/: CMakeLists.txt
src/libverlet/: CMakeLists.txt
src/libverlet/include/: Verlet.h
src/libverlet/src/: Verlet.cpp
